feat:Created Authentication for user sigin, signUp and logout api created

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
 </head>
 <body>
     <%- include('./partials/nav')  %>
-
+    <%= JSON.stringify(user)  %>
     <!-- <h1>Blogify</h1> -->
     <%- include('./partials/scripts')  %>
 </body>
