--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <%- include('./partials/head')  %>
-   <title>Signin</title>
+  <%- include('./partials/head') %>
+    <title>Signin</title>
 </head>
+
 <body>
-    <%- include('./partials/nav')  %>
+  <%- include('./partials/nav') %>
     <div class="container mt-4">
-        <form action="/user/signin" method="post">
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input 
-                type="email" 
-                name="email"
-                class="form-control" 
-                id="exampleInputEmail1" 
-                aria-describedby="emailHelp"
-            />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input 
-                name="password"
-                type="password" 
-                class="form-control" 
-                id="exampleInputPassword1"
-                />
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
+      <form action="/user/signin" method="post">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+        </div>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input name="password" type="password" class="form-control" id="exampleInputPassword1" />
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </div>
-    <%- include('./partials/scripts')  %>
+    <%- include('./partials/scripts') %>
 </body>
+
 </html>
