--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <%- include('./partials/head') %>
-        <title>Blog</title>
-</head>
+    <title>Blog</title>
+  </head>
 
-<body>
+  <body>
     <%- include('./partials/nav') %>
-        <div class="container mt-4">
-            <h1>
-                <%= blog.title %>
-            </h1>
-            <img src="<%= blog.coverImageURL %>" width="700px" height="500px" />
-            <pre class="mt-3"><%= blog.body %></pre>
+    <div class="container mt-4">
+      <h1><%= blog.title %></h1>
+      <img src="<%= blog.coverImageURL %>" width="700px" height="500px" />
+      <pre class="mt-3"><%= blog.body %></pre>
+    </div>
+    <div class="container mt-4">
+      <img
+        src="<%= blog.createdBy.profileImageURL %>"
+        width="50px"
+        alt="Image" /><%= blog.createdBy.fullName %>
+    </div>
+    <div class="container mt-3">
+      <h1>Comments (<%= comments.length %>)</h1>
+      <% if (locals.user) {%>
+      <form action="/blog/comment/<%= blog._id %>" method="post">
+        <div class="mb-3">
+          <input
+            type="text"
+            name="content"
+            class="form-control"
+            placeholder="Enter your comment" />
+          <button type="submit" class="btn btn-sm btn-primary">Add</button>
         </div>
-        <%- include('./partials/scripts') %>
-</body>
+      </form>
 
+      <% } %>
+      <div class="mt-3">
+        <% comments.forEach(comment => { %>
+        <div>
+          <img
+            src="<%= comment.createdBy.profileImageURL %>"
+            width="50px"
+            alt="Image" /><%= comment.createdBy.fullName %>:
+          <pre> <%= comment.content %></pre>
+        </div>
+        <% }) %>
+      </div>
+    </div>
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
