--- a/views/addBlog.ejs
+++ b/views/addBlog.ejs
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <%- include('./partials/head') %>
-        <title>Add new blog</title>
-</head>
+    <title>Add new blog</title>
+  </head>
 
-<body>
+  <body>
     <%- include('./partials/nav') %>
-        <div class="container mt-3">
-            <form action="/blog" method="post" enctype="multipart/form-data">
-                <div class="mb-3">
-                    <label for="coverImage" class="form-label">Cover Image</label>
-                    <input type="file" class="form-control" id="coverImage" name="coverImage"
-                        aria-describedby="coverImage" />
-                </div>
-                <div class="mb-3">
-                    <label for="title" class="form-label">Title</label>
-                    <input type="text" class="form-control" id="title" name="title" aria-describedby="title" />
-                </div>
-                <div class="mb-3">
-                    <label for="body">Body</label>
-                    <textarea name="body" class="form-control" placeholder="Leave a comment here" id="body">
-                </textarea>
-                </div>
-                <div class="mb-3">
-                    <button class="btn btn-primary">Submit</button>
-                </div>
-            </form>
+    <div class="container mt-3">
+      <form action="/blog" method="post" enctype="multipart/form-data">
+        <div class="mb-3">
+          <label for="coverImage" class="form-label">Cover Image</label>
+          <input
+            type="file"
+            class="form-control"
+            id="coverImage"
+            name="coverImage"
+            aria-describedby="coverImage" />
         </div>
-        <%- include('./partials/scripts') %>
-</body>
-
+        <div class="mb-3">
+          <label for="title" class="form-label">Title</label>
+          <input
+            type="text"
+            class="form-control"
+            id="title"
+            name="title"
+            aria-describedby="title" />
+        </div>
+        <div class="mb-3">
+          <label for="body">Body</label>
+          <textarea
+            name="body"
+            class="form-control"
+            placeholder="Leave a comment here"
+            id="body">
+          </textarea>
+        </div>
+        <div class="mb-3">
+          <button class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
