--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -2,22 +2,45 @@
 <html lang="en">
   <head>
     <%- include('./partials/head') %>
+    <style>
+  @media (max-width: 767.98px) {
+    .col-md-6 {
+      width: 100%;
+    }
+      .flex-grow-1 {
+    flex-grow: 1;
+  }
+  }
+</style>
     <title>Blog</title>
   </head>
 
   <body>
     <%- include('./partials/nav') %>
     <div class="container mt-4">
+      <div class="container">
+  <div class="row align-items-center">
+    <div class="col">
       <h1><%= blog.title %></h1>
-      <img src="<%= blog.coverImageURL %>" width="700px" height="500px" />
-      <pre class="mt-3"><%= blog.body %></pre>
     </div>
-    <div class="container mt-4">
-      <img
-        src="<%= blog.createdBy.profileImageURL %>"
-        width="50px"
-        alt="Image" /><%= blog.createdBy.fullName %>
+    <div class="col d-flex justify-content-end align-items-center">
+      <span >By : <%= blog.createdBy.fullName %></span>
+      <img src="<%= blog.createdBy.profileImageURL %>" width="50px" height="50px" alt="Image" class="ms-2" />
     </div>
+  </div>
+</div>
+
+     <div class="container mt-3">
+  <div class="row">
+    <div class="col-12 d-flex flex-column align-items-center">
+      <img src="<%= blog.coverImageURL %>" class="img-fluid mb-3" alt="Blog Image" />
+      <div class="text-center">
+        <%= blog.body %>
+      </div>
+    </div>
+  </div>
+</div>
+
     <div class="container mt-3">
       <h1>Comments (<%= comments.length %>)</h1>
       <% if (locals.user) {%>
@@ -46,5 +69,5 @@
       </div>
     </div>
     <%- include('./partials/scripts') %>
-  </body>
+    </body>
 </html>
