--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <%- include('./partials/head') %>
-        <title>Homepage</title>
-</head>
+    <title>Homepage</title>
+  </head>
 
-<body>
+  <body>
     <%- include('./partials/nav') %>
-        <div class="container mt-3 ">
-            <div class="row row-cols-4">
-                <% blogs.forEach(blog=> { %>
-                    <div class="col">
-                        <div class="card col" style="width: 18rem;">
-                            <img src="<%= blog.coverImageURL %>" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    <%= blog.title %>
-                                </h5>
-                                <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
-                            </div>
-                        </div>
-                    </div>
-                    <% }) %>
+    <div class="container mt-4">
+      <div class="row row-cols-1 row-cols-md-3 g-4 gx-6">
+        <% blogs.forEach(blog=> { %>
+        <div class="col">
+          <div class="card col h-100" style="width: 20rem">
+            <img
+              src="<%= blog.coverImageURL %>"
+              class="card-img-top"
+              alt="..." />
+            <div class="card-body">
+              <h5 class="card-title"><%= blog.title %></h5>
+              <a href="/blog/<%= blog._id %>" class="btn btn-primary">View</a>
             </div>
+          </div>
         </div>
-        <%- include('./partials/scripts') %>
-</body>
-
+        <% }) %>
+      </div>
+    </div>
+    <%- include('./partials/scripts') %>
+  </body>
 </html>
