--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -29,7 +29,7 @@
             role="button"
             data-bs-toggle="dropdown"
             aria-expanded="false">
-            <%= user.email %>
+            <%= fullName %>
           </a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
